# League-Timer

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  requirements.txt
configs/: ahri.yaml  example.yaml  ezreal.yaml
data/: cd_rules.json
docs/: champion-tracking.md  technical-writeup.md
notebooks/: train_cloud.ipynb
scripts/: build-embeddings.ts  ingest-ddragon.ts  sync_timer_cds.py  train.ipynb
scripts/colab/: COLAB.md
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  cooldown.rs  db.rs  lib.rs  main.rs  openai.rs
src/annotate/: annotate.py
src/app/: cast_rules.py  cooldowns.py  detector.py  server.py  skill_order.py
src/app/static/: app.js  index.html  styles.css
src/champions/: __init__.py
src/common/: annotations.py  config.py  torch_utils.py  video.py
src/components/: AbilityTimer.tsx  ChampionCard.tsx
src/context/: GameContext.tsx
src/dataset/: build.py  clip_dataset.py
src/hooks/: useCooldownEvents.ts  useVoice.ts
src/infer/: evaluate.py  live.py  preview_combined.py  recognize.py
src/lib/: cooldownEngine.ts  speech.ts  spells.ts  summoners.ts  voiceParser.ts
src/localize/: __init__.py  level_reader.py  localizer.py  preview.py  preview_level.py
src/services/: llm.ts  rag.ts
src/timers/: __init__.py  r_bar.py
src/train/: model.py  train.py
