[package]
name = "league-timer"
version = "0.1.0"
description = "League of Legends voice cooldown tracker"
authors = ["jon"]
edition = "2021"

[lib]
name = "league_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
